--- a/resources/style/media.css
+++ b/resources/style/media.css
@@ -61,5 +61,13 @@ html>body .iwVideoViewerEditable:hover .videoSetupButton {
 	width: 250px;
 	height: 20px;
 }
+.continueVideoLink {
+	display: block;
+	position: absolute;
+	top: 130px;
+	left: 300px;
+	height: 20px;
+	font-size: 15px;
+}
 .videoBlockSection {
 }
